<resources>
    <string name="app_name">AppacheTestWork</string>
    <string name="undo">Undo</string>
    <string name="repeat">Repeat</string>
    <string name="save">Save</string>
    <string name="color_pick">Color Pick</string>
    <string name="brush_size">Brush Size</string>
    <string name="cant_open_project">Can\'t load project</string>
    <string name="project_preview">Project Preview</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>